<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".RegisterActivity">
    <include
    android:id="@+id/toolbar"
    layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_new_account"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/header"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_first_name"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:inputType="text"
        android:id="@+id/fname"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/header"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/lname"
            android:inputType="text"
            android:textSize="20dp"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/fname"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:id="@+id/email"
        android:textSize="20dp"
        android:padding="5dp"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/lname"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:id="@+id/passw"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:id="@+id/mobile"
        android:inputType="text"
        android:textSize="20dp"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/passw"
        />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radiogrp"  >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male"
                android:textColor="@color/colorPrimaryDark"
                android:buttonTint="@color/colorPrimaryDark"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/female"
                android:textColor="@color/colorPrimaryDark"
                android:buttonTint="@color/colorPrimaryDark"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:id="@+id/other"
                android:textColor="@color/colorPrimaryDark"
                android:buttonTint="@color/colorPrimaryDark"/>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</RelativeLayout>