<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abc_college_of_engineering"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/header"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/user_icon"
            android:layout_below="@+id/header"
            android:id="@+id/usericon"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/email"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/usericon"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/passw"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/email"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keeplogin"
            android:text="@string/keep_me_login"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:layout_below="@+id/passw"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


</RelativeLayout>